# abeehive

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  styles.css  tailwind.config.js  update_msi_0.0.0.json  update_msi_0.0.1.json  update_msi_0.0.2.json  update_msi_0.0.3.json
src/: app.rs  app1.rs  input.css  lib.rs  main.rs  output.csc  output.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  serial_port.rs
src/components/: mod.rs  modal.rs  my_bitmap.rs  my_bitmap1.rs  my_hex_input.rs  my_input.rs  my_input1.rs  my_label.rs  my_optional1.rs  my_optional_input.rs  my_select.rs  my_select1.rs  my_transmit_strat_custom.rs  myc_battery_capacity.rs  myc_button_mapping.rs  myc_motion_sensitivity.rs  myc_transmit_strat_custom.rs  navbar.rs  select_usb_port.rs
src/js/: flowbite.rs  mod.rs
src/params/: abw_params.rs  mod.rs  param_bitmaps.rs  param_comp_constants.rs  param_comp_type_props.rs  param_id.rs  param_options.rs  param_options1.rs  param_values.rs  param_values1.rs
src/prm/: dat.rs  idx.rs  mod.rs  typ.rs  val.rs
src/templates/: angle_detection.rs  ble_beaconing.rs  ble_geozoning.rs  ble_scan_collection.rs  mod.rs  tracking_ble_gps.rs  tracking_ble_gps_realtime.rs  tracking_gps.rs  tracking_wifi_gps.rs
